Fix spacing of middle

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -4,7 +4,6 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 
 }
 
@@ -24,6 +23,8 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 15px;
 }
 
 .card {
@@ -32,7 +33,10 @@ body {
   border-radius: 4px;
 }
 
+.content  {
+  display: flex;
+}
 .middle {
   display: flex;
-
+  flex: 1;
 }
